--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
 /*--------------------------------------------------*/
+
+
 /* PAGE SETUP */
+
+
 /*--------------------------------------------------*/
 
 * {
@@ -17,8 +21,13 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* SHARED STYLES */
+
+
 /*--------------------------------------------------*/
 
 .row {
@@ -35,17 +44,20 @@ section {
 }
 
 .clearfix:after {
-	visibility: hidden;
-	display: block;
-	content: " ";
-	clear: both;
-	height: 0;
-	}
+    visibility: hidden;
+    display: block;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
 
 /* ---------- HEADINGS ---------- */
 
-h1, h2, h3 {
-/*    margin: 0;*/
+h1,
+h2,
+h3 {
+    /*    margin: 0;*/
     font-weight: 300;
     text-transform: uppercase;
 }
@@ -72,13 +84,14 @@ h2:after {
     width: 100px;
     margin: 0 auto;
     margin-top: 30px;
-} 
+}
 
 h3 {
     font-size: 110%;
     margin-bottom: 15px;
     text-align: center;
 }
+
 
 /* ---------- ICONS ------------ */
 
@@ -101,6 +114,7 @@ h3 {
     vertical-align: middle;
 }
 
+
 /* ---------- LINKS ------------ */
 
 a:link,
@@ -118,6 +132,7 @@ a:active {
     border-bottom: 1px solid transparent;
 }
 
+
 /* ---------- PARAGRAPHS ------------ */
 
 .text {
@@ -134,6 +149,7 @@ a:active {
     text-align: center;
 }
 
+
 /* ---------- BUTTONS ------------ */
 
 .button:link,
@@ -146,7 +162,7 @@ input[type=submit] {
     text-decoration: none;
     border-radius: 200px;
     color: #FFF;
-    border: 2px solid #2ecc71;
+    border: 1px solid #2ecc71;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -167,18 +183,23 @@ input[type=submit] {
 input[type=submit]:hover,
 input[type=submit]:active {
     background-color: #28b062;
-    border: 2px solid #28b062;
+    border: 1px solid #28b062;
 }
 
 .btn-box:hover,
 .btn-box:active {
     background-color: #2ecc71;
     color: #FFF;
-    border: 2px solid #2ecc71;
+    border: 1px solid #2ecc71;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* HEADER */
+
+
 /*--------------------------------------------------*/
 
 header {
@@ -191,10 +212,12 @@ header {
 
 .food-text-box {
     position: absolute;
-    width: 1140px;  /*Helps in responsive design, without it width is not fixed so size keeps changing as we change size of window */
+    width: 1140px;
+    /*Helps in responsive design, without it width is not fixed so size keeps changing as we change size of window */
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Helps in responsive design, translates container when size increased or decreased */
+    transform: translate(-50%, -50%);
+    /* Helps in responsive design, translates container when size increased or decreased */
 }
 
 .logo {
@@ -232,9 +255,15 @@ header {
     border-bottom: 2px solid #2ecc71;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* FEATURES SECTION */
+
+
 /*--------------------------------------------------*/
+
 
 /*
     .clearfix .text {
@@ -242,8 +271,13 @@ header {
     }
 */
 
+
 /*--------------------------------------------------*/
+
+
 /* MEALS SECTION */
+
+
 /*--------------------------------------------------*/
 
 .meals {
@@ -259,7 +293,7 @@ header {
     display: block;
     float: left;
     width: 25%;
-/*    margin-top: 10px;*/
+    /*    margin-top: 10px;*/
 }
 
 .img-meal {
@@ -273,17 +307,22 @@ header {
     width: 100%;
     height: auto;
     opacity: 0.7;
-    transform: scale3d(1.15,1.15,1.15);
+    transform: scale3d(1.15, 1.15, 1.15);
     -webkit-transition: transform 0.5s, opacity 0.5s;
 }
 
 .img-meal img:hover {
     opacity: 1;
-    -webkit-transform: scale3d(1.04,1.04,1.04);
+    -webkit-transform: scale3d(1.04, 1.04, 1.04);
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* HOW IT WORKS SECTION */
+
+
 /*--------------------------------------------------*/
 
 .how-it-works {
@@ -313,8 +352,8 @@ header {
 }
 
 .steps div {
-    color:#2ecc71;
-    border: 2px solid #2ecc71;
+    color: #2ecc71;
+    border: 1px solid #2ecc71;
     border-radius: 50%;
     height: 50px;
     width: 50px;
@@ -333,15 +372,20 @@ header {
     margin-right: 25px;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* CITIES SECTION */
+
+
 /*--------------------------------------------------*/
 
 .cities-img {
     width: 100%;
     height: 132.531px;
     margin-bottom: 15px;
-} 
+}
 
 .cities {
     background-color: #f4f4f4;
@@ -349,13 +393,17 @@ header {
 
 
 /*--------------------------------------------------*/
+
+
 /* TESTIMONIALS SECTION */
+
+
 /*--------------------------------------------------*/
 
 .customer-testimonials {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(img/customer-img.jpg);
     background-size: cover;
-/*    height: 90vh;*/
+    /*    height: 90vh;*/
     background-position: center;
     color: #FFF;
     background-attachment: fixed;
@@ -401,8 +449,13 @@ cite img {
     vertical-align: middle;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* SIGN UP SECTION */
+
+
 /*--------------------------------------------------*/
 
 .subscription {
@@ -454,8 +507,13 @@ cite img {
     padding: 5px 0;
 }
 
+
 /*--------------------------------------------------*/
+
+
 /* CONTACT US SECTION */
+
+
 /*--------------------------------------------------*/
 
 .contact-form {
@@ -463,14 +521,17 @@ cite img {
     margin: 0 auto;
 }
 
-
-input[type=text], input[type=email], select, textarea {
+input[type=text],
+input[type=email],
+select,
+textarea {
     width: 100%;
     padding: 7px;
     border: 1px solid #CCC;
     border-radius: 5px;
     outline-color: none;
-/*    transition: ease-in-out, width 0.2s ease-in-out;*/ /* To gradually change width of text boxes using transition */
+    /*    transition: ease-in-out, width 0.2s ease-in-out;*/
+    /* To gradually change width of text boxes using transition */
 }
 
 textarea {
@@ -481,15 +542,20 @@ input[type=checkbox] {
     margin: 10px 5px 10px 0;
 }
 
-
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
     outline-color: #2ecc71;
-/*    width: 100%; */  /*To gradually change width of text boxes using transition */
+    /*    width: 100%; */
+    /*To gradually change width of text boxes using transition */
 }
 
 
 /*--------------------------------------------------*/
+
+
 /* FOOTER SECTION */
+
+
 /*--------------------------------------------------*/
 
 footer {
@@ -500,7 +566,7 @@ footer {
 
 .footer-nav {
     list-style: none;
-    float: left;  
+    float: left;
 }
 
 .footer-social {
@@ -512,7 +578,7 @@ footer {
 .footer-social li {
     display: inline-block;
     margin-right: 20px;
-/*    font-size: 80%;*/
+    /*    font-size: 80%;*/
 }
 
 .footer-social li:last-child {
